--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@
 
     .quote { font-size:22px; color:#111827; line-height:1.35; font-weight:700; text-align:center; margin:6px 0 16px 0; }
     .quote small { display:block; margin-top:6px; color: var(--muted); font-weight:500; font-size:14px; }
+  
+    /* ——— Responsive móvil ——— */
+    @media (max-width: 680px){
+      .container{ padding:12px; }
+      header{ flex-direction:column; align-items:flex-start; gap:6px; }
+      h1{ font-size:18px; }
+      .controls{ grid-template-columns: 1fr 1fr; gap:10px; }
+      .controls label{ font-size:11px; }
+      select, input[type="text"], button{ padding:12px; font-size:16px; /* mejor accesibilidad táctil */ }
+      .board{ width:100%; max-width:100%; grid-gap:6px; padding:8px; border-radius:14px; }
+      .cell{ border-radius:10px; font-size:clamp(10px, 2.8vw, 14px); }
+      .cell .idx{ font-size:10px; }
+      .watermark{ font-size:clamp(28px, 16vw, 56px); letter-spacing:6px; }
+      .quote{ font-size:clamp(16px, 5.5vw, 22px); margin:8px 0 12px 0; }
+      .quote small{ font-size:13px; }
+      .legend{ font-size:13px; }
+    }
+    @media (max-width: 380px){
+      .controls{ grid-template-columns: 1fr; }
+      .badge{ font-size:11px; }
+    }
   </style>
 </head>
 <body>
@@ -513,6 +534,9 @@ el$('cbToggle', (x)=> x.onchange = ()=>{ state.cb = x.checked; draw(); });
   else { document.getElementById('seedInput').value = String(state.seed); }
   draw();
 })();
+
+// Pequeño ajuste: evitar que iOS haga zoom al enfocar inputs (suaviza con blur al generar)
+el$('useSeed', (x)=> x.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); }));
 </script>
 </body>
 </html>
